Working on api first principle
